--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ python/.brutalAlert.py.swp
 python/.sendNotification.py.swp
 python/notificationParser.pyc
 python/scopeParsers.pyc
+python/session.vim
