实现Reminder的倒计时通知功能和保存、读取功能

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@ python/.alarmData.py.swp
 python/.Reminder.pyw.swp
 python/itemGrid.pyc
 python/alarmData.pyc
+python/.alarmSetter.py.swp
+python/alarms.dat
+python/alarmSetter.pyc
+python/itemGrid.pyc
+python/itemGrid.pyc
