增加活动记录功能
增加图标和设置按钮

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ python/alarmSetter.pyc
 python/itemGrid.pyc
 python/itemGrid.pyc
 python/itemGrid.pyc
+python/activities.2014-04-24-23-09-40.dat
+python/itemGrid.pyc
