--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ python/itemGrid.pyc
 python/itemGrid.pyc
 python/activities.2014-04-24-23-09-40.dat
 python/itemGrid.pyc
+*.swp
+activities.*.dat
+*.pyc
