T27: 变量操作实现

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ python/itemGrid.pyc
 python/itemGrid.pyc
 python/itemGrid.pyc
 python/literatePython/使用noweb对python进行文学编程.log
+python/literatePython/test.py.orig
